--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,26 @@ _testmain.go
 *.exe
 *.test
 *.prof
-*.jpg
-*.mpeg
+
+# WebStorm
+*.iml
+
+# Directory-based project format:
+.idea/
+.idea/workspace.xml
+**/.idea/workspace.xml
+
+# mac hidden files
+.DS_Store
+
+#other
+node_modules/
+bower_components/
+.tmp
+.sass-cache
+builds/**/images/*
+*.ogg
+*.mp3
+*.mp4
+*.png
 *.jpeg
